# Team-2---Hackathon

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  IRI Hackathon_FRD_Team2_V0.03.docx  README.md  RUN_TESTS.md  connect-db.sh  docker-compose.dev.yml  docker-compose.yml  main.py  mise.toml  pyproject.toml  sureify.json  sureify.yaml
Documentation/: ALERTS_API_GUIDE.md  API_IMPLEMENTATION_STATUS.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_GUIDE.md  DIAGRAM_GUIDE.md  puddle-api-spec.yaml  puddle-api-spec.yaml.old
agents/: Dockerfile  README.md  SCHEMAS.md  __init__.py  agentOneOutputSchema.json  agent_three_schemas.py  agent_two.py  agent_two_schemas.py  audit_writer.py  db_reader 2.py  db_reader.py  iri_api_spec 2.yaml  iri_client 2.py  iri_client.py  logic.py  main.py  puddle_api_spec.yaml  pyproject.toml  recommendations.py  regenerate_iri_schemas.py  sample_changes 2.json  schemas.py  server.py  sureify.yaml  sureify_client.py  test_sureify_auth.py
agents/agent_one/: __main__.py  main 2.py  main.py
agents/agent_three/: __init__.py  __main__.py  main.py
agents/agent_two/: FLOW 2.md  best_interest_narrative 2.md  main.py  sample_output.json
agents/src/agents/: __init__.py  agent_three_schemas.py  agent_two_schemas.py  audit_writer.py  db_reader.py  iri_api_spec.yaml  iri_client.py  logging_config.py  logic.py  recommendations.py  responsible_ai_schemas.py  sample_changes.json  schemas.py  server.py  sureify_client.py
agents/src/agents/agent_one/: __init__.py  main.py
agents/src/agents/agent_three/: main.py
agents/src/agents/agent_two/: FLOW.md  __init__.py  __main__.py  main.py
agents/tests/: test_agent_two_integration.py  test_agents_work.py  test_passthrough.py  test_responsible_ai.py
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/queries/: dismiss_alert.sql  get_agent_run_event_by_id.sql  get_agent_run_events.sql  get_agent_run_events_stats.sql  get_agent_two_payload_by_ref.sql  get_alert_by_id.sql  get_alerts.sql  get_dashboard_stats.sql  snooze_alert.sql
api/src/: __init__.py
api/src/api/: __init__.py  config.py  database.py  main.py  models.py  sureify_client.py  sureify_models.py
api/src/api/queries/: dismiss_alert.sql  get_agent_run_event_by_id.sql  get_agent_run_events_stats.sql  get_alert_by_id.sql  get_alerts.sql  get_dashboard_stats.sql  get_policy.sql  snooze_alert.sql
api/src/api/routers/: actions.py  admin.py  alerts.py  compare.py  passthrough.py  policies.py  products.py  profiles.py  responsible_ai.py
api/tests/: test_responsible_ai.py
database/: README.md  agent_one_book_of_business.sql  agent_run_events.sql  agent_two_recommendation_runs.sql  alerts.sql  client_profile_overrides.sql  client_suitability_profiles.sql  contract_summary.sql  index_options.sql  main.sql  products.sql
database/payloads/: README.md  agent_one_payload.yaml  agent_three_chat_payloads.yaml  agent_two_payloads.yaml  agent_two_recommendation_runs_table.yaml  agent_two_storable_payload.yaml  (+1 more)
docs/: testing-responsible-ai.md  viewing-responsible-ai-dashboard.md
frontend/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
k8s/: EKS_CLUSTER_PLAN.md  ack-iam-controller.yaml  agents-rbac.yaml  agents.yaml  api.yaml  dev-cluster.yaml  eksctl-cluster.yaml  frontend.yaml  gateway.yaml  kind-cluster.yaml  pgschema-update.yaml  postgres-lb.yaml  setup-cnpg.sh  storage-classes.yaml
schemas/: pyproject.toml
schemas/src/schemas/: __init__.py  iri_schemas.py
scripts/: README.md  generate_architecture_diagram.py  generate_simple_diagram.py  get_products.py  list_products.py  populate_alerts.py  test_alerts_api.py  test_profile_endpoints.py  test_ui_endpoints.py
(+74 files in other folders)
