[project]
name = "team-2-hackathon"
version = "0.1.0"
description = "Team 2 Hackathon monorepo"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "api",
    "agents",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.54.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["agents/tests", "api/tests"]
pythonpath = [".", "api/src"]
filterwarnings = ["ignore::DeprecationWarning"]
