[project]
name = "agents"
version = "0.1.0"
description = "Strands-based agent for Sureify book of business (Marty McFly)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "strands-agents>=0.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "datamodel-code-generator[http]>=0.25",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
