[project]
name = "agents"
version = "0.1.0"
description = "Strands-based agent for Sureify book of business (Marty McFly)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "schemas",
    "strands-agents>=0.1",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "datamodel-code-generator[http]>=0.25",
]

[tool.uv.sources]
schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]
