[project]
name = "agents"
version = "0.1.0"
description = "Strands-based agent for Sureify book of business (Marty McFly)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "strands-agents>=0.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "datamodel-code-generator[http]>=0.25",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "datamodel-code-generator[http]>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
