[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "agents",
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "httpx>=0.28.0",
    "schemas",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
schemas = { workspace = true }
agents = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

