[project]
name = "schemas"
version = "0.1.0"
description = "Shared Pydantic schemas for IRI API"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schemas"]
